--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,7 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  font-family: "Roboto", sans-serif;
+  line-height: 1.8;
+  font-weight: bold;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -28,11 +28,12 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  font-weight: 900;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500; /* Medium */
 }
 
 #app {
